# docker-skeletor

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.sh  gunicorn.conf.py  ide.geany  pyproject.toml  startup-project.sh
csvt/: constants.py  manage.py
csvt/csvt/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
csvt/csvt/management/commands/: import_data.py  import_images_csv.py
csvt/file/: __init__.py  admin.py  apps.py  models.py  settings.py  utils.py
csvt/file/image/: __init__.py  color.py  scale.py  thumbs.py  utils.py
csvt/lk/: admin.py  apps.py  models.py
csvt/locales/en/LC_MESSAGES/: django.po
csvt/locales/ru/LC_MESSAGES/: django.po
csvt/menu/: admin.py  apps.py  managers.py  models.py
csvt/page/: admin.py  apps.py  models.py
csvt/product/: admin.py  models.py
csvt/siteconf/: admin.py  apps.py  models.py
csvt/templates/admin/: tags_change_form.html  tags_filter.html
csvt/upload/: admin.py  apps.py  forms.py  models.py
nginx/: Dockerfile  nginx.conf
static/admin/: parlet-form.css
